# tarot-backend

./: .dockerignore  .env.example  .gitignore  README.md  RL_README.md  SUPABASE_SETUP.md  V4_TRAINING_RESULTS.md  pyproject.toml  test_supabase_integration.py
.github/workflows/: ci.yml
app/: main.py
app/api/: endpoints.py
app/core/: config.py
app/models/: game.py  simulation.py
app/services/: card_serializer.py  game_logger.py  game_logger_service.py  game_service.py  simulation_service.py  supabase_client.py
backend/: README.md  game_state.py  pyproject.toml
backend/app/: main.py
backend/app/api/: endpoints.py
backend/app/core/: config.py
backend/app/services/: game_service.py
backend/tarot_logic/: __init__.py  card.py  deck.py  game_state.py  player.py  rules.py
backend/tests/test_tarot_logic/: test_card.py
docker/: docker-compose.yml
docker/backend/: Dockerfile
frontend/: analysis_options.yaml  pubspec.yaml
frontend/lib/: main.dart
frontend/test/: widget_test.dart
migrations/: 001_create_game_tables.sql
rl/: card_encoder.py  config.py  state_encoder.py  tarot_env.py
scripts/: evaluate_rl.py  monitor_training.sh  simulate.py  test_env.py  test_game_completeness.py  train_rl.py
tarot_logic/: bidding.py  bidding_phase.py  card.py  contract.py  game_state.py  main.py  player.py  rules.py  scoring.py  trick.py
tarot_logic/bots/: __init__.py  bidding_strategy.py  bot_helpers.py  dog_discard_strategy.py  naive_strategy.py  random_strategy.py  strategy.py
tests/: test_simulation_service.py
tests/test_tarot_logic/: test_trick_rules.py
tests/test_tarot_logic/test_bots/: __init__.py  test_bot_helpers.py  test_strategies.py
