[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tarot_app"
version = "0.1.0"
description = "Tarot card game with backend logic, API"
readme = "README.md"
requires-python = ">=3.11.4"
license = { text = "MIT" }
dependencies = [
    "fastapi>=0.103.0",
    "uvicorn[standard]>=0.23.0",
    "pydantic>=2.3.0",
    "pydantic-settings>=2.0.0",
    "requests>=2.31.0",
    "supabase>=2.27.1",
    "python-dotenv>=1.2.1",
]

[project.scripts]
tarot-game = "tarot_logic.main:main"

[tool.hatch.build.targets.wheel]
packages = ["app", "tarot_logic"]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.24.1",  # Pour tester FastAPI
]

[tool.ruff]
# Ignorer les longueurs de ligne pour les docstrings ou les commentaires
line-length = 120
# Assume Python 3.9
target-version = "py39"
# Configuration de l'indentation
indent-width = 4

[tool.ruff.lint]
select = ["E", "F", "UP", "I"]
ignore = ["I001"]

[tool.ruff.format]
# Utiliser des guillemets doubles par défaut
quote-style = "double"
# Indentation de 4 espaces
indent-style = "space"
# Ajouter un retour à la ligne à la fin du fichier
line-ending = "auto"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
